# logseq-doctor

./: .bumpversion.cfg  .codeclimate.yml  .cookiecutterrc  .coveragerc  .cruft.json  .cz.toml  .editorconfig  .env.tests  .gitignore  .golangci.yaml  .gomarkdoc.yml  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .readthedocs.yaml  .releaserc.json  .tool-versions  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  Makefile  README.md  README.rst  go.mod  go.sum  index.html  main.go  mkdocs.yml  objects.inv  pyproject.toml  renovate.json5  setup.cfg  sitemap.xml  tox.ini
.github/: codecov.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: docs.yaml  github-actions.yml  go.yaml  go.yml  maturin.yaml  python-tox.yml  release.yaml  tox.yaml  tox.yml
changelog/: index.html
ci/: bootstrap.py  requirements.txt
ci/templates/.github/workflows/: github-actions.yml
cmd/: backlog.go  content.go  content_test.go  dashboard.go  dashboard_test.go  errors.go  flags.go  flags_test.go  groom.go  lsdg.go  md.go  md_test.go  outline.go  outline_test.go  root.go  set.go  sync.go  sync_test.go  task.go  task_ls_test.go  task_test.go  tidy_up.go  tidy_up_test.go  utils.go  web.go
cmd/lqd-statusbar/: main.go
cmd/testdata/graph/journals/: 2024_12_24.md
cmd/testdata/graph/pages/: empty-bullets.md  spaces.md  spaces.md.golden  tag-brackets.md
cmd/web/: backlog.css  backlog.html
contributing/: index.html
dashboard/: index.html
docs/: changelog.md  conf.py  contributing.md  dashboard.md  gen_ref_pages.py  index.md  installation.md  installation.rst  readme.md  requirements.txt  usage.md  usage.rst
docs/features/: status-bar.md
docs/reference/: cli.md  go.md  index.rst  logseq_doctor.rst  python.md
features/dashboard/: index.html
features/status-bar/: index.html
go/cmd/: root.go  tidy_up.go  tidy_up_test.go
installation/: index.html
internal/: api.go  backlog.go  backlog_test.go  const.go  content.go  content_test.go  date.go  date_test.go  errors.go  finder.go  finder_test.go  json.go  logseq.go  md.go  md_test.go  nodes.go  nodes_test.go  outline.go  outline_test.go  stdin.go  tasks.go  tasks_test.go  tidy_up.go  tidy_up_test.go
internal/api/: api.go  query.go  query_test.go  tags.go  tags_test.go  tasks.go
internal/backlog/: backlog.go  backlog_test.go  config.go  config_test.go  constants.go  constants_test.go  directives.go  directives_test.go  fmt.go  fmt_test.go  write.go  write_test.go
internal/backlog/testdata/stub-api/: computer.json  computer.jsonl  health.json  health.jsonl  home.jsonl  house.json  kitchen.json  kitchen.jsonl  phone.json  phone.jsonl  work.jsonl
internal/dashboard/: moveunranked.go  moveunranked_test.go
internal/groom/: groom.go  groom_test.go
internal/groom/testdata/: graph-template
internal/logseqext/: blocks.go  blocks_test.go  dates.go  dates_test.go  doc.go  finder.go  finder_test.go  tags.go  tags_test.go  tasks.go  tasks_test.go
internal/model/: tasks.go  tasks_test.go
internal/pocketbase/: client.go  client_test.go  schema.go  schema_test.go  subprocess.go  subprocess_test.go
internal/serve/: proxy.go  proxy_test.go
internal/sync/: sync.go  sync_test.go
internal/testdata/: sample-api-response.json
internal/testdata/example-graph/pages/: forbidden.md
internal/testdata/fake-graph/pages/: empty-bullets.md.golden  valid.md
internal/testdata/graph/journals/: 2024_12_24.md.golden  2024_12_25.md.golden
internal/testdata/md/journals/: 2025_01_01.md  2025_01_02.md  2025_01_02.md.golden  2025_01_03.md.golden
internal/testdata/md/pages/: key-deeply-nested.md.golden  key-entire-page.md  key-entire-page.md.golden  key-not-found.md  key-not-found.md.golden  key-with-children.md  key-within-parent.md  key-within-parent.md.golden  (+2 more)
internal/testdata/outline/: dirty.md  dirty.md.golden
internal/testutils/: fake.go  file.go  fixture.go  fixture_test.go  generate.go  logseq.go  output.go  slugs.go  stub.go
lsd/: lsd.go
pkg/: backlog.go  backlog_test.go  content.go  content_test.go  set.go  tidy_up.go  tidy_up_test.go  utils.go
pkg/set/: set.go  set_test.go
pkg/utils/: fmt.go  fmt_test.go  set.go  set_test.go
python/logseq_doctor/: __init__.py  api.py  cli.py  constants.py
readme/: index.html
reference/cli/: index.html
reference/go/: index.html
reference/go/cmd/: index.html
reference/go/internal/: index.html
reference/python/: index.html
reference/python/SUMMARY/: index.html
reference/python/__init__/: index.html
reference/python/__main__/: index.html
reference/python/api/: index.html
reference/python/cli/: index.html
reference/python/constants/: index.html
rust/logseq/: Cargo.toml  README.md
rust/logseq-doctor/: Cargo.toml
rust/logseq-doctor/src/: lib.rs
rust/logseq/src/: lib.rs
rust/logseq/tests/: integration.rs
rust/logseq/tests/fixtures/journal/: add-this.md
rust/logseq/tests/fixtures/journal/has-content/: existing.md  expected-append.md  expected-prepend.md
rust/logseq/tests/fixtures/page/: unneeded-brackets-after.md  unneeded-brackets-before.md
search/: search_index.json
src/: lib.rs
src/logseq_doctor/: __init__.py  __main__.py  api.py  cli.py  constants.py
stylesheets/: extra.css
tests/: helpers.py  test_api.py  test_cli_outline.py  test_cli_tasks.py  test_cli_tidy_up.py  test_logseq_doctor.py  test_outline.py  test_tasks.py  test_tidy_up.py
tests/data/: existing-kanban-with-tabs.md  existing-kanban.md  modified-kanban-with-tabs.md  modified-kanban.md  new-file.md  with-kanban.md
tests/test_api/: nested-kanban.md  page-after.md  page-append.md  page-before.md  page-insert.md  page-replace.md  valid-todo-tasks.json  within-start-end.md
tests/test_cli_outline/: clean.md  dirty.md
tests/test_cli_tasks/: expected-kanban.md
tests/test_cli_tidy_up/: empty-bullets-1-clean.md  empty-bullets-1.md  empty-bullets-2.md
tests/test_tidy_up/: empty-bullets-2-clean.md
usage/: index.html
(+240 files in other folders)
