[dependencies]
pyo3 = {version = "0.20.2"}
regex = "1.10.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "logseq_doctor"

[lints.clippy]
all = "deny"

[lints.rust]
missing_docs = "deny"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-package-section
[package]
authors = ["W Augusto Andreoli <andreoli@sent.com>"]
categories = ["command-line-utilities", "filesystem", "text-editors", "text-processing", "value-formatting"]
description = "Logseq Doctor: heal your Markdown files"
edition = "2021"
name = "logseq-doctor"
version = "0.1.1"
