[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true

[tool.poetry]
name = "logseq-doctor"
version = "0.1.1"
description = "Logseq Doctor: heal your flat old Markdown files before importing them"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/andreoliwa/logseq-doctor"
keywords = [
    "python", "markdown", "python3", "knowledge-graph", "knowledge-base", "markdown-format", "markdown-formatter",
    "logseq", "markdown-formatting", "logseq-plugin"
]

# Complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.urls]
"Documentation" = "https://logseq-doctor.readthedocs.io/"
"Changelog" = "https://logseq-doctor.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/andreoliwa/logseq-doctor/issues"

[tool.poetry.scripts]
lsd = "logseq_doctor.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
mistletoe = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
