# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
assert_fs = "1.1.1"
chrono = "0.4.34"
regex = "1.10.3"

[lints.clippy]
all = "deny"

[lints.rust]
missing_docs = "warn"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-package-section
[package]
authors = ["W Augusto Andreoli <andreoli@sent.com>"]
categories = ["command-line-utilities", "filesystem", "text-editors", "text-processing", "value-formatting"]
description = "Handle Logseq Markdown files in Rust"
documentation = "https://docs.rs/logseq"
edition = "2021"
keywords = ["logseq", "markdown"]
license = "MIT OR Apache-2.0"
name = "logseq"
readme = "README.md"
repository = "https://github.com/andreoliwa/logseq-doctor"
version = "0.3.0"
